Refatora estrutura de pasta

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Início</a>
+      <a id="logo-container" href="#" class="brand-logo">Home</a>
       <ul class="right hide-on-med-and-down">
         <li><a id="conteudo-container" href="#conteudo">Conteúdo</a></li>
         <li><a id="mestres-container" href="#mestres">Mestres</a></li>
@@ -55,7 +55,7 @@
         </ul>
       </div>
     </div>
-    <div class="parallax"><img src="esferas.jpg"></div>
+    <div class="parallax"><img src="img/esferas.jpg"></div>
   </div>
 
   <div class="container" id="conteudo">
@@ -65,7 +65,7 @@
         <p class="left-align light">Este curso, tem como objetivo, capacitar o aluno nas principais tecnologias front-end utilizadas no mercado de trabalho. Serão utilizadas boas práticas de desenvolvimento, visando a implementação do código com consistência, escalável, de fácil manutenção e com uma boa semântica. O curso será dividido em 3 fases:</p>
         <div class="col s12 m4">
           <div class="icon-block">
-            <img src="kuririn.jpg" height="100%" width="100%"/>
+            <img src="img/kuririn.jpg" height="100%" width="100%"/>
             <h5 class="center">Fase Kuririn</h5>
             <p class="light">Serão ensinadas, com atividades práticas, as seguintes tecnologias:</p>
             <ul>
@@ -82,7 +82,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <img src="piccolo.png" height="100%" width="100%"/>
+            <img src="img/piccolo.png" height="100%" width="100%"/>
             <h5 class="center">Fase Piccolo</h5>
             <p class="light">Aqui, através de atividades práticas, os alunos aprenderão:</p>
             <ul>
@@ -104,7 +104,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <img src="goku3.png" height="100%" width="100%"/>
+            <img src="img/goku3.png" height="100%" width="100%"/>
             <h5 class="center">Fase Goku</h5>
             <p class="light">Será ensinado e colocado em prática nesta fase:</p>
             <ul>
@@ -130,7 +130,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="goku.jpg"></div>
+    <div class="parallax"><img src="img/goku.jpg"></div>
   </div>
 
   <div class="container" id="mestres">
@@ -140,7 +140,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <img class="center" src="marcos.jpg" height="100%" width="100%"/>
+            <img class="center" src="img/marcos.jpg" height="100%" width="100%"/>
             <h5 class="center">Marcos Silva</h5>
             <p class="light justify">...</p>
           </div>
@@ -148,7 +148,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <img class="center" src="glau.jpg" height="100%" width="100%"/>
+            <img class="center" src="img/glau.jpg" height="100%" width="100%"/>
             <h5 class="center">Gláuber Brennon</h5>
             <p class="light justify">...</p>
           </div>
@@ -156,7 +156,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <img class="center" src="vr.jpg" height="100%" width="100%"/>
+            <img class="center" src="img/vr.jpg" height="100%" width="100%"/>
             <h5 class="center">Víctor Romário</h5>
             <p class="light justify">Entrou para o mundo de desenvolvimento web em 2014, devido ao projeto de Iniciação Científica que tinha como objetivo integrar a linguagem CUDA com JavaScript. Atualmente estagia na Rede Nacional de Ensino e Pesquisa, trabalhando no front-end com JavaScript, CSS3 e no back-end, com a linguagem Python, o micro framework Flask, SQLAlchemy e o banco Postgres.</p>
           </div>
@@ -174,7 +174,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="backgroundGoku.jpg"></div>
+    <div class="parallax"><img src="img/backgroundGoku.jpg"></div>
   </div>
 
   <footer class="page-footer teal">
@@ -186,7 +186,7 @@
         </div>
         <div class="col l3 s12">
           <h5 class="white-text">Apoio:</h5>
-          <img src="daecomp.png" height="80%" width="80%" />
+          <img src="img/daecomp.png" height="80%" width="80%" />
         </div>
       </div>
     </div>
@@ -200,7 +200,7 @@
   <script src="js/jquery.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
-  <script src="contador.js"></script>
+  <script src="js/contador.js"></script>
 
   </body>
 </html>
