Adiciona descrição do curso e faz ajustes de layout

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Home</a>
+      <a id="logo-container" href="#" class="brand-logo">Desenvolvimento Web</a>
       <ul class="right hide-on-med-and-down">
-        <li><a id="conteudo-container" href="#conteudo">Conteúdo</a></li>
+        <li><a id="conteudo-container" href="#conteudo">O Curso</a></li>
         <li><a id="mestres-container" href="#mestres">Mestres</a></li>
       </ul>
       <ul id="nav-mobile" class="side-nav">
-        <li><a id="logo-container" href="#">Início</a></li>
-        <li><a id="conteudo-container" href="#conteudo">Conteúdo</a></li>
+        <li><a id="logo-container" href="#">Desenvolvimento Web</a></li>
+        <li><a id="conteudo-container" href="#conteudo">O Curso</a></li>
         <li><a id="mestres-container" href="#mestres">Mestres</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
@@ -29,9 +29,8 @@
 
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
-      <h1 class="center shadow">Desenvolvimento Web</h1>
-      <h2 class="center shadow">De Kuririn a Goku</h2>
       <div class="container row center">
+        <h1 class="shadow">Faltam</h1>
         <ul class="countdown">
           <li class="timer">
             <span class="days"></span>
@@ -61,60 +60,70 @@
   <div class="container" id="conteudo">
     <div class="section">
       <div class="row">
-        <h2 class="center brown-text"><i>Conteúdo Programático</i></h2>
-        <p class="left-align light">Este curso, tem como objetivo, capacitar o aluno nas principais tecnologias front-end utilizadas no mercado de trabalho. Serão utilizadas boas práticas de desenvolvimento, visando a implementação do código com consistência, escalável, de fácil manutenção e com uma boa semântica. O curso será dividido em 3 fases:</p>
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <img src="img/kuririn.jpg" height="100%" width="100%"/>
-            <h5 class="center">Fase Kuririn</h5>
-            <p class="light">Serão ensinadas, com atividades práticas, as seguintes tecnologias:</p>
-            <ul>
-                <li class="brown-text">Introdução</li>
-                <li class="brown-text">HTML5</li>
-                <li class="brown-text">CSS</li>
-                <li class="brown-text">Git</li>
-                <li class="brown-text">
-                  Prática 1: Utilizando o Git em uma aplicação HTML-CSS - Estilizando o HTML Criando uma landing page(Startup)
-                </li>
-            </ul>
-          </div>
-        </div>
+        <h2 class="center brown-text"><i>O Curso</i></h2>
+        <p class="justify-align light">
+            A área de desenvolvimento web está em ascenção e muda constantemente.
+            As novas tecnologias visam auxiliar no desenvolvimento dos sistemas e aumentar a qualidade do produto final.
+            O curso de desenvolvimento web - de Kuririn a Goku,
+            tem como objetivo capacitar o aluno nas principais tecnologias front-end utilizadas no mercado de trabalho.
+            Através boas práticas de desenvolvimento, visando a implementação do código com consistência, escalável,
+            de fácil manutenção e com uma boa semântica.
+        </p>
+        <p class="justify-align light">Nesta primeira edição, o curso está dividido em 3 módulos:</p>
+        <div class="row">
+            <div class="col s12 m4">
+              <div class="icon-block">
+                <img src="img/kuririn.jpg" height="100%" width="100%"/>
+                <h5 class="center">Fase Kuririn</h5>
+                <p class="light">Serão ensinadas, com atividades práticas, as seguintes tecnologias:</p>
+                <ul>
+                    <li class="brown-text">Introdução</li>
+                    <li class="brown-text">HTML5</li>
+                    <li class="brown-text">CSS</li>
+                    <li class="brown-text">Git</li>
+                    <li class="brown-text">
+                      Prática 1: Utilizando o Git em uma aplicação HTML-CSS - Estilizando o HTML Criando uma landing page(Startup)
+                    </li>
+                </ul>
+              </div>
+            </div>
 
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <img src="img/piccolo.png" height="100%" width="100%"/>
-            <h5 class="center">Fase Piccolo</h5>
-            <p class="light">Aqui, através de atividades práticas, os alunos aprenderão:</p>
-            <ul>
-                <li class="brown-text">CSS3</li>
-                <li class="brown-text">Bibliotecas CSS e JavaScript
-                  <ol>
-                    <li>jQuery</li>
-                    <li>Materialize</li>
-                    <li>Bootstrap</li>
-                  </ol>
-                </li>
-                <li class="brown-text">JavaScript.</li>
-                <li class="brown-text">Prática 2: Transformar a landing page em um site responsivo Mobile-First.</li>
-                <li class="brown-text">Prática 3: Criando meu animal virtual.</li>
-                <li class="brown-text">Prática 4: Validação de Formulários.</li>
-            </ul>
+            <div class="col s12 m4">
+              <div class="icon-block">
+                <img src="img/piccolo.png" height="100%" width="100%"/>
+                <h5 class="center">Fase Piccolo</h5>
+                <p class="light">Aqui, através de atividades práticas, os alunos aprenderão:</p>
+                <ul>
+                    <li class="brown-text">CSS3</li>
+                    <li class="brown-text">Bibliotecas CSS e JavaScript
+                      <ol>
+                        <li>jQuery</li>
+                        <li>Materialize</li>
+                        <li>Bootstrap</li>
+                      </ol>
+                    </li>
+                    <li class="brown-text">JavaScript.</li>
+                    <li class="brown-text">Prática 2: Transformar a landing page em um site responsivo Mobile-First.</li>
+                    <li class="brown-text">Prática 3: Criando meu animal virtual.</li>
+                    <li class="brown-text">Prática 4: Validação de Formulários.</li>
+                </ul>
+              </div>
           </div>
-        </div>
 
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <img src="img/goku3.png" height="100%" width="100%"/>
-            <h5 class="center">Fase Goku</h5>
-            <p class="light">Será ensinado e colocado em prática nesta fase:</p>
-            <ul>
-                <li class="brown-text">JavaScript: Orientação a Objetos.</li>
-                <li class="brown-text">Automatizador de tarefas.</li>
-                <li class="brown-text">Processadores de CSS.</li>
-                <li class="brown-text">Prática 5: Carregando conteúdo dinâmicamente.</li>
-                <li class="brown-text">Prática 6: Projeto Geolocalização (HTML5 + CSS3 + JS + Leaflet.js).</li>
-            </ul>
-          </div>
+            <div class="col s12 m4">
+              <div class="icon-block">
+                <img src="img/goku3.png" height="100%" width="100%"/>
+                <h5 class="center">Fase Goku</h5>
+                <p class="light">Será ensinado e colocado em prática nesta fase:</p>
+                <ul>
+                    <li class="brown-text">JavaScript: Orientação a Objetos.</li>
+                    <li class="brown-text">Automatizador de tarefas.</li>
+                    <li class="brown-text">Processadores de CSS.</li>
+                    <li class="brown-text">Prática 5: Carregando conteúdo dinâmicamente.</li>
+                    <li class="brown-text">Prática 6: Projeto Geolocalização (HTML5 + CSS3 + JS + Leaflet.js).</li>
+                </ul>
+              </div>
+            </div>
         </div>
       </div>
 
@@ -142,7 +151,7 @@
           <div class="icon-block">
             <img class="center" src="img/marcos.jpg" height="100%" width="100%"/>
             <h5 class="center">Marcos Silva</h5>
-            <p class="light justify">...</p>
+            <p class="light justify-align">...</p>
           </div>
         </div>
 
@@ -150,7 +159,7 @@
           <div class="icon-block">
             <img class="center" src="img/glau.jpg" height="100%" width="100%"/>
             <h5 class="center">Gláuber Brennon</h5>
-            <p class="light justify">...</p>
+            <p class="light justify-align">...</p>
           </div>
         </div>
 
@@ -158,7 +167,7 @@
           <div class="icon-block">
             <img class="center" src="img/vr.jpg" height="100%" width="100%"/>
             <h5 class="center">Víctor Romário</h5>
-            <p class="light justify">Entrou para o mundo de desenvolvimento web em 2014, devido ao projeto de Iniciação Científica que tinha como objetivo integrar a linguagem CUDA com JavaScript. Atualmente estagia na Rede Nacional de Ensino e Pesquisa, trabalhando no front-end com JavaScript, CSS3 e no back-end, com a linguagem Python, o micro framework Flask, SQLAlchemy e o banco Postgres.</p>
+            <p class="light justify-align">Entrou para o mundo de desenvolvimento web em 2014, devido ao projeto de Iniciação Científica que tinha como objetivo integrar a linguagem CUDA com JavaScript. Atualmente estagia na Rede Nacional de Ensino e Pesquisa, trabalhando no front-end com JavaScript, CSS3 e no back-end, com a linguagem Python, o micro framework Flask, SQLAlchemy e o banco Postgres.</p>
           </div>
         </div>
       </div>
