--- a/index.html
+++ b/index.html
@@ -130,51 +130,6 @@
     </div>
   </div>
 
-
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="shadow myTextSize header col s12 light">Conheça os mestres!</h5>
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="img/goku.jpg"></div>
-  </div>
-
-  <div class="container" id="mestres">
-    <div class="section">
-
-      <div class="row">
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <img class="center" src="img/marcos.jpg" height="100%" width="100%"/>
-            <h5 class="center">Marcos Silva</h5>
-            <p class="light justify-align">...</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <img class="center" src="img/glau.jpg" height="100%" width="100%"/>
-            <h5 class="center">Gláuber Brennon</h5>
-            <p class="light justify-align">...</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <img class="center" src="img/vr.jpg" height="100%" width="100%"/>
-            <h5 class="center">Víctor Romário</h5>
-            <p class="light justify-align">Entrou para o mundo de desenvolvimento web em 2014, devido ao projeto de Iniciação Científica que tinha como objetivo integrar a linguagem CUDA com JavaScript. Atualmente estagia na Rede Nacional de Ensino e Pesquisa, trabalhando no front-end com JavaScript, CSS3 e no back-end, com a linguagem Python, o micro framework Flask, SQLAlchemy e o banco Postgres.</p>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
@@ -184,6 +139,62 @@
       </div>
     </div>
     <div class="parallax"><img src="img/backgroundGoku.jpg"></div>
+  </div>
+
+  <div class="container" id="mestres">
+    <div class="section">
+      <div class="row">
+        <h2 class="center brown-text">
+            <i>Os mestres</i>
+        </h2>
+        <div class="col s12 m4">
+            <div class="icon-block">
+                <img class="center" src="img/glau.jpg" height="100%" width="100%"/>
+                <h5 class="center">Gláuber Brennon</h5>
+                <p class="light justify-align">
+                    Em 2012, participou de diversos projetos Saffira (Sistema de Segurança Florestal), BSLS (Sistema de Segurança e Sinalização Luminosa voltada para ciclistas),
+                    ScanRT, Anson Framework, Kinesis, AutoSec e foi co-fundador Automatronic Wearable Devices.
+                    Em 2013, ganhou o segundo lugar no concurso 'Tecnologias que Transformam', na Campus Party.
+                    Em 2014, foi desenvolvedor na ADSS - Presença digital.
+                    Tem experiência em Linux Embarcado, MySQL, Zend PHP.
+                </p>
+            </div>
+        </div>
+
+        <div class="col s12 m4">
+            <div class="icon-block">
+                <img class="center" src="img/marcos.jpg" height="100%" width="100%"/>
+                <h5 class="center">Marcos Silva</h5>
+                <p class="light justify-align">
+                    Em 2009, fez o curso de desenvolvimento Java e buscou aprender outras linguagens e tecnologias tais como: PHP, Html, CSS, Javascript.
+                    Em 2010, entrou no curso de BCC na UFBA e desde então fez Iniciação ciêntifica e estágios adiquirindo experiências nas mais variadas áreas, tais como,
+                    mineração de dados, visão computacional, visualização de dados, em diversos frameworks, o Yii, o Wordpress, o Drupal, o Flask,
+                    em diversas linguagens de programação o C/C++, o Python, o Haskell, o Ruby, entre outras.
+                    Atualmente é lider de projeto e desenvolvedor no projeto GIIRO.
+                    Neste projeto utiliza HTML5, CSS3, Javascript, no front end, e no back end utiliza a linguagem de programação Python
+                    com o micro-framework Flask, o ORM SQLAlchemy com a extensão GeoAlchemy2 e o banco de dados Postgres com a extensão PostGis.
+                </p>
+            </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <img class="center" src="img/vr.jpg" height="100%" width="100%"/>
+            <h5 class="center">Víctor Romário</h5>
+            <p class="light justify-align">
+                Entrou para o mundo de desenvolvimento web em 2014,
+                devido ao projeto de Iniciação Científica que tinha como objetivo integrar a linguagem CUDA com JavaScript.
+                Atualmente estagia como desenvolvedor no projeto GIIRO (Gerenciador de Informações e Infraestrutura de Rede Óptica da Rede Nacional de Ensino e Pesquisa (RNP)),
+                no Ponto de Presença do Estado da Bahia (POP-BA) na UFBA.
+                Neste projeto utiliza HTML5, CSS3, Javascript, no front end, e no back end utiliza a linguagem de programação Python
+                com o micro-framework Flask, o ORM SQLAlchemy com a extensão GeoAlchemy2 e o banco de dados Postgres com a extensão PostGis
+                trabalhando no front-end com JavaScript, CSS3 e no back-end, com a linguagem Python, o micro framework Flask, SQLAlchemy e o banco Postgres.
+            </p>
+          </div>
+        </div>
+      </div>
+
+    </div>
   </div>
 
   <footer class="page-footer teal">
