--- a/index.html
+++ b/index.html
@@ -9,6 +9,35 @@
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link rel="stylesheet" href="css/font-awesome.min.css">
+
+  <link rel="apple-touch-icon" sizes="57x57" href="img/icons/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="img/icons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="img/icons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="img/icons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="img/icons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="img/icons/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="img/icons/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="img/icons/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="img/icons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="img/icons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
+  <link rel="manifest" href="img/icons/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="img/icons/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-80126739-3', 'auto');
+    ga('send', 'pageview');
+  </script>
+
 </head>
 <body>
   <nav class="white" role="navigation">
@@ -212,7 +241,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      <strong>Desenvolvido com <i class="fa fa-heart text-red" aria-hidden="true"></i> por <a class="brown-text text-lighten-3" href="https://www.instagram.com/vrvictorromario/" target="_blank">VR Paz de Jesus</a></strong>
+      <strong>Desenvolvido com <i class="fa fa-heart text-red" aria-hidden="true"></i> por <a class="brown-text text-lighten-3" href="https://www.instagram.com/vrvictorromario/" target="_blank">VR Paz de Jesus</a><a class="brown-text text-lighten-3" href="https://www.linkedin.com/in/massilva?authType=NAME_SEARCH&authToken=JOfq&locale=pt_BR&trk=tyah&trkInfo=clickedVertical%3Amynetwork%2CclickedEntityId%3A269479179%2CauthType%3ANAME_SEARCH%2Cidx%3A1-3-3%2CtarId%3A1472580106068%2Ctas%3AMarcos%20Silva" target="_blank"> & Marcos Silva</a></strong>
       </div>
     </div>
   </footer>
