--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 devido ao projeto de Iniciação Científica que tinha como objetivo integrar a linguagem CUDA com JavaScript.
                 Atualmente estagia como desenvolvedor no projeto GIIRO (Gerenciador de Informações e Infraestrutura de Rede Óptica da Rede Nacional de Ensino e Pesquisa (RNP)),
                 no Ponto de Presença do Estado da Bahia (POP-BA) na UFBA.
-                Neste projeto utiliza HTML5, CSS3, Javascript, no front end, e no back end utiliza a linguagem de programação Python
+                Neste projeto, trabalha com HTML5, CSS3, Javascript, no front end, e no back end utiliza a linguagem de programação Python
                 com o micro-framework Flask, o ORM SQLAlchemy com a extensão GeoAlchemy2 e o banco de dados Postgres com a extensão PostGis.
             </p>
           </div>
