Troca de nome do curso para Desenvolvimento Web Z

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>Curso Desenvolvimento Web</title>
+  <title>Curso de Desenvolvimento Web Z</title>
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
@@ -42,7 +42,7 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Desenvolvimento Web</a>
+      <a id="logo-container" href="#" class="brand-logo">Desenvolvimento Web Z</a>
       <ul class="right hide-on-med-and-down">
         <li><a id="conteudo-container" href="#conteudo">O Curso</a></li>
         <li><a id="mestres-container" href="#mestres">Mestres</a></li>
@@ -229,8 +229,8 @@
     <div class="container">
       <div class="row">
         <div class="col l9 s12">
-          <h5 class="white-text">Desenvolvimento Web: de Kuririn a Goku</h5>
-          <p class="grey-text text-lighten-4">O curso Desenvolvimento Web: de Kuririn a Goku é ministrado por Marcos Silva, Gláuber Brennon e Víctor Romário com apoio do Diretório Acadêmico de Engenharia da Computação (DAECOMP) UNIFACS.</p>
+          <h5 class="white-text">Desenvolvimento Web Z</h5>
+          <p class="grey-text text-lighten-4">O curso Desenvolvimento Web Z é ministrado por Marcos Silva, Gláuber Brennon e Víctor Romário com apoio do Diretório Acadêmico de Engenharia da Computação (DAECOMP) UNIFACS.</p>
         </div>
         <div class="col l3 s12">
           <h5 class="white-text">Apoio:</h5>
