[layout]Mudando estilos e novo index-banner
- Mudança na cor da barra de navegação para Laranja para condizer com o
  uniforme de treinamento do Mestre Kame
- Adicionada nova sessão index com título do curso, subtitulo e uma
  imagem do anime Dragon Ball Z

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/saiyan-sans.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link rel="stylesheet" href="css/font-awesome.min.css">
 
@@ -40,7 +41,7 @@
 
 </head>
 <body>
-  <nav class="white" role="navigation">
+  <nav class="orange" role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo">Desenvolvimento Web Z</a>
       <ul class="right hide-on-med-and-down">
@@ -57,33 +58,11 @@
   </nav>
 
   <div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
-      <div class="container row center">
-        <h1 class="shadow">Faltam</h1>
-        <ul class="countdown">
-          <li class="timer">
-            <span class="days"></span>
-            <span class="dots"></span>
-            <p class="timeRefDays shadow"></p>
-          </li>
-          <li class="timer">
-            <span class="hours"></span>
-            <span class="dots">:</span>
-            <p class="timeRefHours shadow"></p>
-          </li>
-          <li class="timer">
-            <span class="minutes"></span>
-            <span class="dots">:</span>
-            <p class="timeRefMinutes shadow"></p>
-          </li>
-          <li class="timer">
-            <span class="seconds"></span>
-            <p class="timeRefSeconds shadow"></p>
-          </li>
-        </ul>
-      </div>
+    <div class="container row center">
+      <h1 class="shadow saiyan-sans">Desenvolvimento Web Z</h1>
+      <h3 class="shadow">Uma abordagem Saiyajin</h1>
     </div>
-    <div class="parallax"><img src="img/esferas.jpg"></div>
+    <div class="parallax"><img src="img/dragonball-1.jpg"></div>
   </div>
 
   <div class="container" id="conteudo">
@@ -168,6 +147,36 @@
       </div>
     </div>
     <div class="parallax"><img src="img/backgroundGoku.jpg"></div>
+  </div>
+
+  <div id="count-banner" class="parallax-container">
+    <div class="section no-pad-bot">
+      <div class="container row center">
+        <h1 class="shadow">Faltam</h1>
+        <ul class="countdown">
+          <li class="timer">
+            <span class="days"></span>
+            <span class="dots"></span>
+            <p class="timeRefDays shadow"></p>
+          </li>
+          <li class="timer">
+            <span class="hours"></span>
+            <span class="dots">:</span>
+            <p class="timeRefHours shadow"></p>
+          </li>
+          <li class="timer">
+            <span class="minutes"></span>
+            <span class="dots">:</span>
+            <p class="timeRefMinutes shadow"></p>
+          </li>
+          <li class="timer">
+            <span class="seconds"></span>
+            <p class="timeRefSeconds shadow"></p>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="parallax"><img src="img/esferas.jpg"></div>
   </div>
 
   <div class="container" id="mestres">
