Namefix on navbar

--- a/index.html
+++ b/index.html
@@ -47,14 +47,15 @@
       <ul class="right hide-on-med-and-down">
         <li><a id="conteudo-container" href="#conteudo">Sobre</a></li>
         <li><a id="modulos-container" href="#modulos">Módulos</a></li>
-        <li><a id="inscrevase-container" href="#count-banner">Mestres</a></li>
+        <li><a id="inscrevase-container" href="#count-banner">Inscreva-se</a></li>
         <li><a id="mestres-container" href="#mestres">Mestres</a></li>
       </ul>
       <ul id="nav-mobile" class="side-nav">
         <li><a id="logo-container" href="#">Desenvolvimento Web</a></li>
         <li><a id="conteudo-container" href="#conteudo">Sobre</a></li>
         <li><a id="modulos-container" href="#modulos">Módulos</a></li>
-        <li><a id="inscrevase-container" href="#count-banner">Mestres</a></li>
+        <li><a id="inscrevase-container" href="#count-banner">Inscreva-se</a></li>
+        <li><a id="inscrevase-container" href="#mestres">Mestres</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
