Alteração ordem texto rodapé para deixar uniforme com ordem de aparecimento

--- a/index.html
+++ b/index.html
@@ -45,17 +45,13 @@
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo">Desenvolvimento Web Z</a>
       <ul class="right hide-on-med-and-down">
-        <li><a id="conteudo-container" href="#conteudo">Sobre</a></li>
-        <li><a id="modulos-container" href="#modulos">Módulos</a></li>
-        <li><a id="inscrevase-container" href="#count-banner">Inscreva-se</a></li>
+        <li><a id="conteudo-container" href="#conteudo">O Curso</a></li>
         <li><a id="mestres-container" href="#mestres">Mestres</a></li>
       </ul>
       <ul id="nav-mobile" class="side-nav">
         <li><a id="logo-container" href="#">Desenvolvimento Web</a></li>
-        <li><a id="conteudo-container" href="#conteudo">Sobre</a></li>
-        <li><a id="modulos-container" href="#modulos">Módulos</a></li>
-        <li><a id="inscrevase-container" href="#count-banner">Inscreva-se</a></li>
-        <li><a id="inscrevase-container" href="#mestres">Mestres</a></li>
+        <li><a id="conteudo-container" href="#conteudo">O Curso</a></li>
+        <li><a id="mestres-container" href="#mestres">Mestres</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
@@ -72,62 +68,67 @@
   <div class="container" id="conteudo">
     <div class="section">
       <div class="row">
-        <h1 class="center orange-text saiyan-sans">Sobre</h1>
+        <h2 class="center brown-text"><i>O Curso</i></h2>
         <p class="justify-align light">
-		  O curso Desenvolvimento Web Z foi feito para quem deseja cair de cabeça no mundo do desenvolvimento Web com foco em Front End.
+            A área de desenvolvimento web está em ascenção e muda constantemente.
+            As novas tecnologias visam auxiliar no desenvolvimento dos sistemas e aumentar a qualidade do produto final.
+            O curso de desenvolvimento web - de Kuririn a Goku,
+            tem como objetivo capacitar o aluno nas principais tecnologias front-end utilizadas no mercado de trabalho.
+            Através boas práticas de desenvolvimento, visando a implementação do código com consistência, escalável,
+            de fácil manutenção e com uma boa semântica.
         </p>
-        <p class="justify-align light">
-		  Os alunos que participarem deste curso serão treinados por discípulos do Mestre Kame e receberão a doutrina do HTML, CSS e Javascript através de aulas expositivas e muitas atividades práticas.
-        </p>
-        <p class="justify-align light">
-		  Além de acesso a metodologia do Mestre Kame os alunos irão aprender sobre tecnologias importantíssimas no mundo do desenvolvimento Front End como Bootstrap, Materialize, jQuery, LeafletJS, entre outros
-        </p>
-	  </div>
-	</div>
-  </div>
-  <div class="container" id="modulos">
-    <div class="section">
-      <div class="row">
-        <h1 class="center orange-text saiyan-sans">Modulos</h1>
-        <p class="justify-align light">
-			Objetivando a didática este curso será entregue no formato de 3 módulos sendo eles fundamentados respectivamente em cima de cada um dos pilares do desenvolvimento Front End (HTML, CSS e Javascript).
-        </p>
+        <p class="justify-align light">Nesta primeira edição, o curso está dividido em 3 módulos:</p>
         <div class="row">
             <div class="col s12 m4">
               <div class="icon-block">
-                <h5 class="center">Módulo Kuririn</h5>
-				<div class="guerreiros-z-bg kuririn"></div>
-                <h6 class="center">Conteúdos:</h6>
+                <img src="img/kuririn.jpg" height="100%" width="100%"/>
+                <h5 class="center">Fase Kuririn</h5>
+                <p class="light">Serão ensinadas, com atividades práticas, as seguintes tecnologias:</p>
                 <ul>
-				  <li>HTML5 e seus elementos</li>
-                  <li>Mergulhando no Bootstrap</li>
-                  <li>Controlando versões com Git</li>
-				</ul>
-			  </div>
+                    <li class="brown-text">Introdução</li>
+                    <li class="brown-text">HTML5</li>
+                    <li class="brown-text">CSS</li>
+                    <li class="brown-text">Git</li>
+                    <li class="brown-text">
+                      Prática 1: Utilizando o Git em uma aplicação HTML-CSS - Estilizando o HTML Criando uma landing page(Startup)
+                    </li>
+                </ul>
+              </div>
             </div>
 
             <div class="col s12 m4">
               <div class="icon-block">
-                <h5 class="center">Módulo Piccolo</h5>
-				<div class="guerreiros-z-bg piccolo"></div>
-                <h6 class="center">Conteúdos:</h6>
-                <ul class="browser-default">
-                  <li>Estilizando com CSS</li>
-                  <li>Animando com CSS3</li>
-                  <li>Desenvolvendo Mobile-first</li>
+                <img src="img/piccolo.png" height="100%" width="100%"/>
+                <h5 class="center">Fase Piccolo</h5>
+                <p class="light">Aqui, através de atividades práticas, os alunos aprenderão:</p>
+                <ul>
+                    <li class="brown-text">CSS3</li>
+                    <li class="brown-text">Bibliotecas CSS e JavaScript
+                      <ol>
+                        <li>jQuery</li>
+                        <li>Materialize</li>
+                        <li>Bootstrap</li>
+                      </ol>
+                    </li>
+                    <li class="brown-text">JavaScript.</li>
+                    <li class="brown-text">Prática 2: Transformar a landing page em um site responsivo Mobile-First.</li>
+                    <li class="brown-text">Prática 3: Criando meu animal virtual.</li>
+                    <li class="brown-text">Prática 4: Validação de Formulários.</li>
                 </ul>
               </div>
           </div>
 
             <div class="col s12 m4">
               <div class="icon-block">
-                <h5 class="center">Módulo Goku</h5>
-				<div class="guerreiros-z-bg goku"></div>
-                <h6 class="center">Conteúdos:</h6>
+                <img src="img/goku3.png" height="100%" width="100%"/>
+                <h5 class="center">Fase Goku</h5>
+                <p class="light">Será ensinado e colocado em prática nesta fase:</p>
                 <ul>
-                  <li>JavaScript</li>
-                  <li>JavaScript Orientado a Objetos</li>
-                  <li>Bibliotecas úteis</li>
+                    <li class="brown-text">JavaScript: Orientação a Objetos.</li>
+                    <li class="brown-text">Automatizador de tarefas.</li>
+                    <li class="brown-text">Processadores de CSS.</li>
+                    <li class="brown-text">Prática 5: Carregando conteúdo dinâmicamente.</li>
+                    <li class="brown-text">Prática 6: Projeto Geolocalização (HTML5 + CSS3 + JS + Leaflet.js).</li>
                 </ul>
               </div>
             </div>
@@ -137,32 +138,43 @@
     </div>
   </div>
 
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <a target="_blank" href="https://www.eventbrite.com.br/e/curso-de-desenvolvimento-web-tickets-27304239716?aff=erelexpmlt" class="waves-effect waves-light btn-large">Inscreva-se!</a>
+        </div>
+      </div>
+    </div>
+    <div class="parallax"><img src="img/backgroundGoku.jpg"></div>
+  </div>
+
   <div id="count-banner" class="parallax-container">
-    <div class="container row center">
-      <h1 class="shadow">Faltam</h1>
-      <ul class="countdown">
-        <li class="timer">
-      	<span class="days"></span>
-      	<span class="dots"></span>
-      	<p class="timeRefDays shadow"></p>
-        </li>
-        <li class="timer">
-      	<span class="hours"></span>
-      	<span class="dots">:</span>
-      	<p class="timeRefHours shadow"></p>
-        </li>
-        <li class="timer">
-      	<span class="minutes"></span>
-      	<span class="dots">:</span>
-      	<p class="timeRefMinutes shadow"></p>
-        </li>
-        <li class="timer">
-      	<span class="seconds"></span>
-      	<p class="timeRefSeconds shadow"></p>
-        </li>
-      </ul>
-      <h3 class="shadow">Não perca tempo</h3>
-      <a target="_blank" href="https://www.eventbrite.com.br/e/curso-de-desenvolvimento-web-tickets-27304239716?aff=erelexpmlt" class="btn-large btn-dbz">Inscreva-se agora!</a>
+    <div class="section no-pad-bot">
+      <div class="container row center">
+        <h1 class="shadow">Faltam</h1>
+        <ul class="countdown">
+          <li class="timer">
+            <span class="days"></span>
+            <span class="dots"></span>
+            <p class="timeRefDays shadow"></p>
+          </li>
+          <li class="timer">
+            <span class="hours"></span>
+            <span class="dots">:</span>
+            <p class="timeRefHours shadow"></p>
+          </li>
+          <li class="timer">
+            <span class="minutes"></span>
+            <span class="dots">:</span>
+            <p class="timeRefMinutes shadow"></p>
+          </li>
+          <li class="timer">
+            <span class="seconds"></span>
+            <p class="timeRefSeconds shadow"></p>
+          </li>
+        </ul>
+      </div>
     </div>
     <div class="parallax"><img src="img/esferas.jpg"></div>
   </div>
@@ -227,7 +239,7 @@
       <div class="row">
         <div class="col l9 s12">
           <h5 class="white-text">Desenvolvimento Web Z</h5>
-          <p class="grey-text text-lighten-4">O curso Desenvolvimento Web Z é ministrado por Marcos Silva, Gláuber Brennon e Víctor Romário com apoio do Diretório Acadêmico de Engenharia da Computação (DAECOMP) UNIFACS.</p>
+          <p class="grey-text text-lighten-4">O curso Desenvolvimento Web Z é ministrado por Gláuber Brennon, Marcos Silva e Víctor Romário com apoio do Diretório Acadêmico de Engenharia da Computação (DAECOMP) UNIFACS.</p>
         </div>
         <div class="col l3 s12">
           <h5 class="white-text">Apoio:</h5>
@@ -237,7 +249,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      <strong>Desenvolvido com <i class="fa fa-heart text-red" aria-hidden="true"></i> por <a class="brown-text text-lighten-3" href="https://www.instagram.com/vrvictorromario/" target="_blank">VR Paz de Jesus</a><a class="brown-text text-lighten-3" href="https://www.linkedin.com/in/massilva?authType=NAME_SEARCH&authToken=JOfq&locale=pt_BR&trk=tyah&trkInfo=clickedVertical%3Amynetwork%2CclickedEntityId%3A269479179%2CauthType%3ANAME_SEARCH%2Cidx%3A1-3-3%2CtarId%3A1472580106068%2Ctas%3AMarcos%20Silva" target="_blank"> com Marcos Silva</a> <a class="brown-text text-lighten-3" href="https://www.linkedin.com/in/gbrennon?authType=NAME_SEARCH&authToken=K9RH&locale=pt_BR&trk=tyah&trkInfo=clickedVertical%3Amynetwork%2CclickedEntityId%3A138939218%2CauthType%3ANAME_SEARCH%2Cidx%3A1-2-2%2CtarId%3A1472646497352%2Ctas%3AGlauber" target="_blank"> & Gláuber Brennon</a></strong>
+      <strong>Desenvolvido com <i class="fa fa-heart text-red" aria-hidden="true"></i> por <a class="brown-text text-lighten-3" href="https://www.instagram.com/vrvictorromario/" target="_blank">VR Paz de Jesus</a><a class="brown-text text-lighten-3" href="https://www.linkedin.com/in/massilva?authType=NAME_SEARCH&authToken=JOfq&locale=pt_BR&trk=tyah&trkInfo=clickedVertical%3Amynetwork%2CclickedEntityId%3A269479179%2CauthType%3ANAME_SEARCH%2Cidx%3A1-3-3%2CtarId%3A1472580106068%2Ctas%3AMarcos%20Silva" target="_blank"> & Marcos Silva</a></strong>
       </div>
     </div>
   </footer>
