--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       <div class="row">
         <div class="col l9 s12">
           <h5 class="white-text">Desenvolvimento Web Z</h5>
-          <p class="grey-text text-lighten-4">O curso Desenvolvimento Web Z é ministrado por Marcos Silva, Gláuber Brennon e Víctor Romário com apoio do Diretório Acadêmico de Engenharia da Computação (DAECOMP) UNIFACS.</p>
+          <p class="grey-text text-lighten-4">O curso Desenvolvimento Web Z é ministrado por Gláuber Brennon, Marcos Silva e Víctor Romário com apoio do Diretório Acadêmico de Engenharia da Computação (DAECOMP) UNIFACS.</p>
         </div>
         <div class="col l3 s12">
           <h5 class="white-text">Apoio:</h5>
