--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <p class="light">Aqui, através de atividades práticas, os alunos aprenderão:</p>
                 <ul>
                     <li class="brown-text">CSS3</li>
-                    <li class="brown-text">Bibliotecas CSS e JavaScript
+                    <li class="brown-text">Bibliotecas CSS e JavaScript:
                       <ol>
                         <li>jQuery</li>
                         <li>Materialize</li>
