Ajeita layout para mostrar os nomes do desenvolvedores do site na versão móvel

--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
       </div>
     </div>
     <div class="footer-copyright">
-      <div class="container">
-      <strong>Desenvolvido com <i class="fa fa-heart text-red" aria-hidden="true"></i> por <a class="brown-text text-lighten-3" href="https://www.instagram.com/vrvictorromario/" target="_blank">VR Paz de Jesus</a><a class="brown-text text-lighten-3" href="https://www.linkedin.com/in/massilva?authType=NAME_SEARCH&authToken=JOfq&locale=pt_BR&trk=tyah&trkInfo=clickedVertical%3Amynetwork%2CclickedEntityId%3A269479179%2CauthType%3ANAME_SEARCH%2Cidx%3A1-3-3%2CtarId%3A1472580106068%2Ctas%3AMarcos%20Silva" target="_blank"> com Marcos Silva</a> <a class="brown-text text-lighten-3" href="https://www.linkedin.com/in/gbrennon?authType=NAME_SEARCH&authToken=K9RH&locale=pt_BR&trk=tyah&trkInfo=clickedVertical%3Amynetwork%2CclickedEntityId%3A138939218%2CauthType%3ANAME_SEARCH%2Cidx%3A1-2-2%2CtarId%3A1472646497352%2Ctas%3AGlauber" target="_blank"> & Gláuber Brennon</a></strong>
-      </div>
+        <div class="container">
+            <strong>Desenvolvido com <i class="fa fa-heart text-red" aria-hidden="true"></i> por <a class="brown-text text-lighten-3" href="https://www.instagram.com/vrvictorromario/" target="_blank">VR Paz de Jesus</a><a class="brown-text text-lighten-3" href="https://www.linkedin.com/in/massilva" target="_blank"> com Marcos Silva</a> <a class="brown-text text-lighten-3" href="https://www.linkedin.com/in/gbrennon" target="_blank"> & Gláuber Brennon</a></strong>
+        </div>
     </div>
   </footer>
 
